--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary">
     <div class="container">
-        <a class="navbar-brand me-2" href="https://najottalim.uz/">
+        <a class="navbar-brand me-2" href="{% url 'home' %}">
             <img
             src="{% static 'photo/logo.png' %}"
             height="25"
